Fixed scrolllbar overflow modal

--- a/src/app/shared/components/modal/modal.component.css
+++ b/src/app/shared/components/modal/modal.component.css
@@ -36,7 +36,7 @@
   border-width: 2px;
   overflow: hidden;
   z-index: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .actions {
